Optimized day 6